--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/hooks": "^2.8.1",
     "expo": "~46.0.9",
+    "expo-constants": "^13.2.4",
     "expo-status-bar": "~1.4.0",
+    "formik": "^2.1.4",
     "react": "18.0.0",
-    "react-native": "0.69.4"
+    "react-native": "0.69.5",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
