--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   },
   "dependencies": {
     "@react-native-community/hooks": "^2.8.1",
+    "@react-navigation/native": "^5.9.8",
     "expo": "~46.0.9",
     "expo-constants": "^13.2.4",
     "expo-status-bar": "~1.4.0",
     "formik": "^2.1.4",
     "react": "18.0.0",
     "react-native": "0.69.5",
+    "react-native-gesture-handler": "~2.5.0",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
