--- a/package.json
+++ b/package.json
@@ -9,17 +9,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-community/hooks": "^2.8.1",
-    "@react-navigation/native": "^5.9.8",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/material-bottom-tabs": "^6.2.3",
+    "@react-navigation/native": "^6.0.12",
+    "@react-navigation/native-stack": "^6.8.0",
+    "@types/moment": "^2.13.0",
+    "apisauce": "^2.1.6",
+    "axios": "^0.27.2",
     "expo": "~46.0.9",
     "expo-constants": "^13.2.4",
+    "expo-image-picker": "~13.3.1",
     "expo-status-bar": "~1.4.0",
     "formik": "^2.1.4",
+    "jwt-decode": "^3.1.2",
     "react": "18.0.0",
     "react-native": "0.69.5",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-paper": "^4.12.4",
+    "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-vector-icons": "^9.2.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
