--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-community/hooks": "^2.8.1",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/picker": "^1.8.1",
+    "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/material-bottom-tabs": "^6.2.3",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
@@ -21,17 +23,29 @@
     "expo": "~46.0.9",
     "expo-constants": "^13.2.4",
     "expo-image-picker": "~13.3.1",
+    "expo-location": "~14.3.0",
+    "expo-secure-store": "~11.3.0",
     "expo-status-bar": "~1.4.0",
     "formik": "^2.1.4",
     "jwt-decode": "^3.1.2",
+    "lottie-react-native": "5.1.3",
     "react": "18.0.0",
+    "react-dom": "18.0.0",
     "react-native": "0.69.5",
+    "react-native-dropdown-select-list": "^1.0.21",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-localize": "^2.2.3",
+    "react-native-multi-steps": "^0.1.7",
     "react-native-paper": "^4.12.4",
+    "react-native-phone-input": "^1.3.4",
+    "react-native-phone-number-input": "^2.1.0",
+    "react-native-progress": "^5.0.0",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-svg": "~12.3.0",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "~0.18.7",
     "yup": "^0.32.11"
   },
   "devDependencies": {
